fix spacing card

--- a/src/modules/shardv2/components/CardFi/styles.module.scss
+++ b/src/modules/shardv2/components/CardFi/styles.module.scss
@@ -129,7 +129,7 @@
   }
 }
 .cardFiContent_bottom {
-  padding-top: 24px;
+  padding-top: 16px;
 
   &_btn {
     font-size: 10px;
